# DotPatch

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DotPatch.sln  DotPatch.sln.startup.json  vcpkg.json
DotPatch.Api/: Class1.cs  IHookService.cs  IPatch.cs
DotPatch.Api/Marshalling/: NativeMemoryHelper.cs
DotPatch.Example.NierReplicantRemake/: DotPatch.Example.NierReplicantRemake.csproj  NierReplicantRemakePatch.cs
DotPatch.Runtime.Managed/: Class1.cs  DotPatch.Runtime.Managed.csproj  HookServiceImpl.cs  NativeInterface.cs  PatchManager.cs
DotPatch.Runtime.Native/: CMakeLists.txt
DotPatch.Runtime.Native/include/dotpatch/: common.hh  debug.hh  hook.hh  host.hh  runtime.hh  utility.hh
DotPatch.Runtime.Native/include/dotpatch/debug/: console.hh  panic.hh
DotPatch.Runtime.Native/include/dotpatch/misc/: common.hh  utility.hh
DotPatch.Runtime.Native/include/dotpatch/runtime/: ManagedHost.hh  host.hh  init.hh  panic.hh
DotPatch.Runtime.Native/source/: dll_main.cc  exe_main.cc
DotPatch.Runtime.Native/source/debug/: console.cc  panic.cc
DotPatch.Runtime.Native/source/hook/: init.cc
DotPatch.Runtime.Native/source/host/: create_host.cc  global.cc
DotPatch.Runtime.Native/source/runtime/: create_host.cc  host.cc  init.cc  panic.cc
DotPatch.TestApp/: DotPatch.TestApp.csproj  Program.cs
